# portal_nstu

./: .angulardoc.json  .dockerignore  .gitignore  Dockerfile  ProjectMap.md  README.md  docker-compose.yaml  go.mod  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: backend.yml  build_prod.yml
backend/: .gitignore  go.mod  go.sum
backend/calendar_service/: .gitignore  go.mod  go.sum  main.go
backend/calendar_service/client/: getClient.go
backend/calendar_service/web/: getTokenFromWeb.go  saveToken.go  tokenFromFile.go
backend/deployment_manager/: go.mod  go.sum  main.go
backend/deployment_manager/infoService/: memoryInfo.go
backend/deployment_manager/run/: runMicroservice.go  runService.go
backend/facultiesService/: .angulardoc.json  Dockerfile  go.mod  go.sum  main.go
backend/facultiesService/api/: controllerAPI.go
backend/facultiesService/connections/: connectionRabbitMQ.go
backend/sso-portal/: .gitignore  Taskfile.yaml  go.mod  go.sum
backend/user-temporary-data-service/: .dockerignore  Dockerfile  go.mod  go.sum  main.go
backend/user_auth_controller/: Dockerfile  go.mod  go.sum  main.go
backend_api/: .gitignore  Cargo.toml
backend_api/src/: main.rs
backend_api/src/controller/: create_user.rs  mod.rs  root.rs  setup_route.rs
backend_api/src/models/: data.rs  mod.rs
backend_api/src/service/: d_base.rs  mod.rs  port.rs
frontend/: .angulardoc.json  .gitignore  .npmrc  .vercelignore  Dockerfile  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
media_service/: go.mod
(+124 files in other folders)
