[package]
name = "backend_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.18"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = "0.7"
dotenv = "0.15"
log = "0.4.22"
env_logger = "0.11.5"
anyhow = "1.0.89"